--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  
+  <!-- Enlace con el CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  
-  
+  <!-- Agregue encabezado con el texto "¡Hola mundo!" -->
+  <h1 id="holamundo">¡Hola mundo!</h1>
+
+  <!-- Agregue un atributo de ID que sea igual a "rojo" -->
+  <h2 id="rojo">Este es un enunciado con ID rojo</h2>
+
+  <!-- Inserte una imagen del directorio de imágenes. -->
+  <img src="Pictures/G - Grass.jpg" width= "500" alt="Imagen de ejemplo"> 
+
+  <!-- Agregue cuatro encabezados más que digan "Hola mundo". -->
+  <h2 class="azul">Hola mundo</h2>
+  <h3>Hola mundo</h3>
+  <h4 class="azul">Hola mundo</h4>
+  <h5 id="cambiomarron" onclick="Cambiocolor()">Hola mundo</h5>
+
+  <!-- Enlazar con el JavaScript -->
+  <script src="script.js"></script>
+
   <!--
   This script places a badge on your repl's full-browser view back to your repl's cover
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
